--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,12 @@ server.pid
 *.eml
 /dist/
 .cache
+/.bsp
+/.idea
+/.idea_modules
+/.classpath
+/.project
+/.settings
+/RUNNING_PID
+/conf/application.conf
+/.g8
